# profile

./: AGENTS.md  Makefile  README.md  Saravanakumar Arunachalam_Resume.docx  Saravanakumar_Arunachalam_Resume.docx  Saravanakumar_Resume.docx  generate_profile.py  profile.py
.github/: copilot-instructions.md
.github/skills/resume-workflow/: SKILL.md
data/: ask.json  poorni.json
src/: generate_profile.py  pyproject.toml
src/data/: ask.json  ask_infra.json  ask_long.json  ask_short.json
