[tool.poetry]
name = "profile"
version = "0.1.0"
description = "Create the resume"
authors = ["Saravanakumar Arunachalam <saravanastar@gmail.com>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-docx = "^1.1.2"
reportlab = "^4.0.8"
pypdf = "^3.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
